--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-cfg-if = "0.1.2"
+cfg-if = "0.1.7"
 wasm-bindgen = "0.2"
-js-sys = "0.3.2"
+js-sys = "0.3.15"
 fixedbitset = "0.1.9"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
@@ -31,6 +31,19 @@ wee_alloc = { version = "0.4.2", optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.2"
+
+[dependencies.web-sys]
+version = "0.3.15"
+features = [
+    'Document',
+    'Element',
+    'HtmlCanvasElement',
+    'WebGlBuffer',
+    'WebGlRenderingContext',
+    'WebGlProgram',
+    'WebGlShader',
+    'Window',
+]
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
