add click,  not work because of  lifetime problem

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,10 @@ features = [
     'WebGlProgram',
     'WebGlShader',
     'Window',
+    'MouseEvent',
+    'EventTarget',
+    "DomRect",
+    "DomRectReadOnly",
 ]
 
 [profile.release]
